--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/User/list.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/User/list.html.twig
@@ -25,7 +25,7 @@
             <li class="developer">
                 <div class="image">
                     <a href="{{ url('user_show', {'name': user.name}) }}" class="name">
-                        <img src="{{ gravatar(user.email, 100) }}" alt="{{ user.name }}, Symfony developer" with="100" height="100" />
+                        <img src="{{ gravatar(user.email, 50) }}" alt="{{ user.name }}, Symfony developer" />
                     </a>
                 </div>
                 <div class="generals">
