Added a line between commits

--- a/src/Knplabs/Symfony2BundlesBundle/Resources/public/css/style.css
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/public/css/style.css
@@ -554,6 +554,7 @@ h1 {
 
         #repo-show .commits li {
             padding: 5px 0px;
+            border-top: 1px solid #eee;
         }
 
         #repo-show .commits span{
