Added "fork me on github"

--- a/src/Knplabs/Symfony2BundlesBundle/Resources/views/layout.html.twig
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/views/layout.html.twig
@@ -23,6 +23,9 @@
     </script>
 </head>
 <body {% block body_attributes %}{% endblock %}>
+    <div class="ribbon">
+        <a href="http://github.com/knplabs/symfony2bundles"><img style="position: absolute; top: 0; right: 0; border: 0;z-index:1000;" src="https://assets2.github.com/img/30f550e0d38ceb6ef5b81500c64d970b7fb0f028?repo=&url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_orange_ff7600.png&path=" alt="Fork me on GitHub"></a>
+    </div>
     <div id="header">
         <div id="header-inner">
             <a href="{{ path('homepage') }}" title="Back to the homepage" id="logo">
