--- a/src/Knplabs/Symfony2BundlesBundle/Resources/public/css/style.css
+++ b/src/Knplabs/Symfony2BundlesBundle/Resources/public/css/style.css
@@ -632,3 +632,20 @@ h1 {
 
 #api {}
     #api #main { padding: 20px; }
+
+/* ------ Oh yes fork me ----*/
+.ribbon {
+  background-color: #a00;
+  overflow: hidden;
+}
+.ribbon a {
+  border: 1px solid #faa;
+  color: #fff;
+  display: block;
+  font: bold 81.25% 'Helvetiva Neue', Helvetica, Arial, sans-serif;
+  margin: 0.05em 0;
+  padding: 0.5em 3.5em;
+  text-align: center;
+  text-decoration: none;
+  z-index:1000;
+}
