Paginate bundles, projects and developers lists

--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.html.twig
@@ -15,5 +15,6 @@
             </ul>
         </div>
         {% include 'KnplabsSymfony2Bundles:Repo:bigList.html.twig' with {'repos': repos} %}
+        {{ paginator_render(repos)|raw }}
     </div>
 {% endblock %}
