--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/list.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/list.html.twig
@@ -1,4 +1,4 @@
-{% extends 'KnplabsSymfony2Bundles:Repo:list.html.twig' %}
+{% extends 'KnplabsSymfony2BundlesBundle:Repo:list.html.twig' %}
 
 {% block h1 %}All {{ repos|length }} Bundles{% endblock %}
 
