--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/mediumList.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/mediumList.html.twig
@@ -1,1 +1,1 @@
-{% extends 'KnplabsSymfony2Bundles:Repo:mediumList.html.twig' %}
+{% extends 'KnplabsSymfony2BundlesBundle:Repo:mediumList.html.twig' %}
