--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/show.js.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/show.js.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2Bundles:Repo:show.js.twig' with {'repo': repo, 'callback': callback} %}
+{% include 'KnplabsSymfony2BundlesBundle:Repo:show.js.twig' with {'repo': repo, 'callback': callback} %}
