--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Main/api.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Main/api.html.twig
@@ -1,4 +1,4 @@
-{% extends "KnplabsSymfony2Bundles::layout.html.twig" %}
+{% extends "KnplabsSymfony2BundlesBundle::layout.html.twig" %}
 
 {% block title %}Developer HTTP API{% endblock %}
 
