--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Main/notFound.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Main/notFound.html.twig
@@ -1,4 +1,4 @@
-{% extends "KnplabsSymfony2Bundles::layout.html.twig" %}
+{% extends "KnplabsSymfony2BundlesBundle::layout.html.twig" %}
 {% block title %}404 - Page not found{% endblock %}
 {% block slogan %}There is nothing here.{% endblock %}
 {% block content %}
