--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/searchResults.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/searchResults.html.twig
@@ -1,4 +1,4 @@
-{% extends 'KnplabsSymfony2Bundles:Repo:search.html.twig' %}
+{% extends 'KnplabsSymfony2BundlesBundle:Repo:search.html.twig' %}
 
 {% block body_attributes %}id="search-result"{% endblock %}
 
@@ -15,13 +15,13 @@
     {% if bundles|length > 0 %}
         <div id="search-result-bundles">
             <h2>{{ bundles|length }} Bundle{{ bundles|length > 1 ? 's' : '' }}</h2>
-            {% include 'KnplabsSymfony2Bundles:Bundle:bigList.html.twig' with {'repos': bundles} %}
+            {% include 'KnplabsSymfony2BundlesBundle:Bundle:bigList.html.twig' with {'repos': bundles} %}
         </div>
     {% endif %}
     {% if projects|length > 0 %}
         <div id="search-result-projects">
             <h2 class="section-title">{{ projects|length }} Project{{ projects|length > 1 ? 's' : '' }}</h2>
-            {% include 'KnplabsSymfony2Bundles:Project:bigList.html.twig' with {'repos': projects} %}
+            {% include 'KnplabsSymfony2BundlesBundle:Project:bigList.html.twig' with {'repos': projects} %}
         </div>
     {% endif %}
     </div>
