--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/searchResults.json.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/searchResults.json.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2Bundles:Repo:list.json.twig' with {'repos': repos, 'callback': callback} %}
+{% include 'KnplabsSymfony2BundlesBundle:Repo:list.json.twig' with {'repos': repos, 'callback': callback} %}
