--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/bundles.js.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/bundles.js.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2Bundles:User:bundles.js.php' with {'repos': repos, 'callback': callback} %}
+{% include 'KnplabsSymfony2BundlesBundle:User:bundles.js.php' with {'repos': repos, 'callback': callback} %}
