--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Project/list.js.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Project/list.js.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2Bundles:Repo:list.js.twig' with {'repos': repos, 'callback': callback} %}
+{% include 'KnplabsSymfony2BundlesBundle:Repo:list.js.twig' with {'repos': repos, 'callback': callback} %}
