--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Project/show.json.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Project/show.json.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2Bundles:Repo:show.json.twig' with {'repo': repo} %}
+{% include 'KnplabsSymfony2BundlesBundle:Repo:show.json.twig' with {'repo': repo} %}
