--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/search.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/search.html.twig
@@ -1,4 +1,4 @@
-{% extends 'KnplabsSymfony2Bundles::layout.html.twig' %}
+{% extends 'KnplabsSymfony2BundlesBundle::layout.html.twig' %}
 
 {% block body_attributes %}id="search"{% endblock %}
 
