--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/bundles.json.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/bundles.json.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2Bundles:User:bundles.json.php' with {'repos': repos} %}
+{% include 'KnplabsSymfony2BundlesBundle:User:bundles.json.php' with {'repos': repos} %}
