--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/list.js.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/list.js.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2Bundles:User:list.js.php' with {'users': users, 'callback': callback} %}
+{% include 'KnplabsSymfony2BundlesBundle:User:list.js.php' with {'users': users, 'callback': callback} %}
