--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/list.json.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/list.json.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2Bundles:User:list.json.php' with {'users': users} %}
+{% include 'KnplabsSymfony2BundlesBundle:User:list.json.php' with {'users': users} %}
