--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/show.json.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/show.json.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2Bundles:User:show.json.php' with {'user': user} %}
+{% include 'KnplabsSymfony2BundlesBundle:User:show.json.php' with {'user': user} %}
