--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/list.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/list.html.twig
@@ -1,7 +1,7 @@
 {% extends 'KnplabsSymfony2BundlesBundle:Repo:list.html.twig' %}
 
-{% block h1 %}All {{ repos|length }} Bundles{% endblock %}
+{% block h1 %}All {{ repos.totalItemCount }} Bundles{% endblock %}
 
-{% block title %}All {{ repos|length }} Bundles{% endblock %}
+{% block title %}All {{ repos.totalItemCount }} Bundles{% endblock %}
 
 {% block description %}All Open Source Symfony2 Bundles sorted by {{ sort }}{% endblock %}
