--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Project/list.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Project/list.html.twig
@@ -1,8 +1,8 @@
 {% extends 'KnplabsSymfony2BundlesBundle:Repo:list.html.twig' %}
 
-{% block h1 %}All {{ repos|length }} Projects{% endblock %}
+{% block h1 %}All {{ repos.totalItemCount }} Projects{% endblock %}
 
-{% block title %}All {{ repos|length }} Projects{% endblock %}
+{% block title %}All {{ repos.totalItemCount }} Projects{% endblock %}
 
 {% block description %}All Open Source Symfony2 Projects sorted by {{ sort }}{% endblock %}
 
