Updated the use of PaginatorBundle and MarkdownBundle

--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.html.twig
@@ -15,6 +15,6 @@
             </ul>
         </div>
         {% include 'KnplabsSymfony2BundlesBundle:Repo:bigList.html.twig' with {'repos': repos} %}
-        {{ paginator_render(repos)|raw }}
+        {{ repos|paginate }}
     </div>
 {% endblock %}
