--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/list.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/list.html.twig
@@ -40,6 +40,6 @@
             </li>
             {% endfor %}
         </ul>
-        {{ paginator_render(users)|raw }}
+        {{ users|paginate }}
     </div>
 {% endblock %}
