--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/listFeatured.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Bundle/listFeatured.html.twig
@@ -1,7 +1,7 @@
 <div id="hot-bundles">
     <h2>What's hot?</h2>
     <ul class="bundles_list">
-        {% for bundle in bundles %}
+        {%- for bundle in bundles %}
         <li class="bundle">
             <a href="{{ path('repo_show', {'username': bundle.username, 'name': bundle.name}) }}">
                 <span class="name">{{ bundle.name }}</span>
@@ -9,6 +9,6 @@
                 <span class="description">{{ bundle.description }}</span>
             </a>
         </li>
-        {% endfor %}
+        {%- endfor %}
     </ul>
 </div>
