--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Main/api.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Main/api.html.twig
@@ -12,7 +12,7 @@
 <div id="api">
     <div id="main">
         <div class="doc_text markdown">
-            {{ text|markdown|raw }}
+            {{ text|markdown }}
         </div>
     </div>
 </div>
