--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/searchResults.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/searchResults.html.twig
@@ -12,18 +12,18 @@
 
 {% block content %}
     <div id="main">
-    {% if bundles|length > 0 %}
+    {%- if bundles|length > 0 %}
         <div id="search-result-bundles">
             <h2>{{ bundles|length }} Bundle{{ bundles|length > 1 ? 's' : '' }}</h2>
             {% include 'KnplabsSymfony2BundlesBundle:Bundle:bigList.html.twig' with {'repos': bundles} %}
         </div>
-    {% endif %}
-    {% if projects|length > 0 %}
+    {%- endif %}
+    {%- if projects|length > 0 %}
         <div id="search-result-projects">
             <h2 class="section-title">{{ projects|length }} Project{{ projects|length > 1 ? 's' : '' }}</h2>
             {% include 'KnplabsSymfony2BundlesBundle:Project:bigList.html.twig' with {'repos': projects} %}
         </div>
-    {% endif %}
+    {%- endif %}
     </div>
     <div id="side">
         {% render 'symfony2bundles.controller.bundle:listFeaturedAction' with {'max': 2} %}
