--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.html.twig
@@ -7,11 +7,11 @@
         <div id="sort">
             <span class="sort-by">Sort by</span>
             <ul class="tabs" id="repo-tabs">
-                {% for field, text in sortFields %}
+                {%- for field, text in sortFields %}
                 <li{{ field == sort ? ' class="current"' : '' }}>
                     <a href='{% block route_list %}{{ path('bundle_list', {'sort': field}) }}{% endblock %}'>{{ text }}</a>
                 </li>
-                {% endfor %}
+                {%- endfor %}
             </ul>
         </div>
         {% include 'KnplabsSymfony2BundlesBundle:Repo:bigList.html.twig' with {'repos': repos} %}
