--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/listLatest.atom.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/listLatest.atom.twig
@@ -5,7 +5,7 @@
     <link type="application/atom+xml" rel="self" href="{{ url('latest', {'_format': 'atom'}) }}"/>
     <title>Symfony2 Bundles &amp; Projects</title>
     <updated>{{ 'now'|date('c') }}</updated>
-    {% for repo in repos %}
+    {%- for repo in repos %}
     <entry>
         <id>{{ repo.fullName }}</id>
         <published>{{ repo.createdAt|date('c') }}</published>
@@ -18,8 +18,8 @@
         </author>
         <content type="html">
             &lt;strong&gt;{{ repo.description }}&lt;/strong&gt;&lt;br /&gt;
-            {{ repo.readme|markdown }}
+            {{ repo.readme|markdown|e }}
         </content>
     </entry>
-    {% endfor %}
+    {%- endfor %}
 </feed>
