--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/mediumList.html.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/mediumList.html.twig
@@ -1,5 +1,5 @@
 <ul class="repos-list">
-    {% for repo in repos %}
+    {%- for repo in repos %}
     <li class="repo">
         <div class="generals">
             <a class="name">{{ repo.name }}</a>
@@ -9,5 +9,5 @@
             <a class="button" href="{{ path('repo_show', {'username': repo.username, 'name': repo.name}) }}">More details</a>
         </div>
     </li>
-    {% endfor %}
+    {%- endfor %}
 </ul>
