Moved the rendering of JS and JSON apis to Twig
Importing a PHP template from a Twig one was dropped in an early Symfony PR

--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.js.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.js.twig
@@ -1,1 +1,5 @@
-{% include 'KnplabsSymfony2BundlesBundle:Repo:list.js.php' with {'repos': repos, 'callback': callback} %}
+{% set array = [] %}
+{% for repo in repos %}
+{% set array = array|merge([repo.toSmallArray]) %}
+{% endfor %}
+{{ '%s(%s)'|format(callback, array|json_encode) }}
