--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/show.js.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/show.js.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2BundlesBundle:User:show.js.php' with {'user': user, 'callback': callback} %}
+{{ '%s(%s)'|format(callback, user.toBigArray|json_encode) }}
