--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.json.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.json.twig
@@ -1,1 +1,5 @@
-{% include 'KnplabsSymfony2BundlesBundle:Repo:list.json.php' with {'repos': repos } %}
+{% set array = [] %}
+{% for repo in repos %}
+{% set array = array|merge([repo.toSmallArray]) %}
+{% endfor %}
+{{ array|json_encode }}
