--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/show.js.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/show.js.twig
@@ -1,1 +1,1 @@
-{% include 'KnplabsSymfony2BundlesBundle:Repo:show.js.php' with {'repo': repo, 'callback': callback} %}
+{{ '%s(%s)'|format(callback, repo.toBigArray|json_encode) }}
