Fixed escaping of the JSON and JS templates

--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.js.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.js.twig
@@ -2,4 +2,4 @@
 {% for repo in repos %}
 {% set array = array|merge([repo.toSmallArray]) %}
 {% endfor %}
-{{ '%s(%s)'|format(callback, array|json_encode) }}
+{{ '%s(%s)'|format(callback, array|json_encode)|raw }}
