--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.json.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/Repo/list.json.twig
@@ -2,4 +2,4 @@
 {% for repo in repos %}
 {% set array = array|merge([repo.toSmallArray]) %}
 {% endfor %}
-{{ array|json_encode }}
+{{ array|json_encode|raw }}
