--- a/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/list.json.twig
+++ b/src/Knplabs/Bundle/Symfony2BundlesBundle/Resources/views/User/list.json.twig
@@ -2,4 +2,4 @@
 {% for user in users %}
 {% set array = array|merge([user.toSmallArray]) %}
 {% endfor %}
-{{ array|json_encode }}
+{{ array|json_encode|raw }}
