Prefixed all service names with knp_

--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Main/index.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Main/index.html.twig
@@ -12,7 +12,7 @@
         In Symfony2 everything is a bundle, the core of Symfony2 itself is made of bundles.
     </div>
     <img src="{{ asset('bundles/knpsymfony2bundles/images/mascot.png') }}" alt="Mascot" id="mascot" />
-    {% render 'symfony2bundles.controller.bundle:listBestScoreAction' %}
-    {% render 'symfony2bundles.controller.bundle:listNewestAction' %}
-    {% render 'symfony2bundles.controller.bundle:listFeaturedAction' %}
+    {% render 'knp_symfony2bundles.controller.bundle:listBestScoreAction' %}
+    {% render 'knp_symfony2bundles.controller.bundle:listNewestAction' %}
+    {% render 'knp_symfony2bundles.controller.bundle:listFeaturedAction' %}
 {% endblock %}
