--- a/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/searchResults.html.twig
+++ b/src/Knp/Bundle/Symfony2BundlesBundle/Resources/views/Repo/searchResults.html.twig
@@ -26,6 +26,6 @@
     {%- endif %}
     </div>
     <div id="side">
-        {% render 'symfony2bundles.controller.bundle:listFeaturedAction' with {'max': 2} %}
+        {% render 'knp_symfony2bundles.controller.bundle:listFeaturedAction' with {'max': 2} %}
     </div>
 {% endblock %}
